[gd_scene load_steps=6 format=3 uid="uid://b3714l5hkgphh"]

[ext_resource type="Script" path="res://Register.gd" id="1_8kniy"]
[ext_resource type="AudioStream" uid="uid://w85gdxq5ey5x" path="res://audio/airplane_ambience-6830.mp3" id="2_1ax5c"]
[ext_resource type="Texture2D" uid="uid://bgp2hprqdogrw" path="res://astronaut-4106766_1280.jpg" id="2_cnc6b"]
[ext_resource type="FontFile" uid="uid://dgba8l3ee6gl6" path="res://Xolonium-Regular.ttf" id="3_b3hoe"]
[ext_resource type="Texture2D" uid="uid://c7s5pnetutemm" path="res://back button.png" id="5_7fa50"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1.0
offset_right = -1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8kniy")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_1ax5c")
autoplay = true

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(573, 426.5)
scale = Vector2(1.35053, 1.23047)
texture = ExtResource("2_cnc6b")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.475
anchor_top = 0.417
anchor_right = 0.475
anchor_bottom = 0.417
offset_left = -287.2
offset_top = -116.216
offset_right = 286.8
offset_bottom = 131.784
grow_horizontal = 2
grow_vertical = 2

[node name="SID" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_b3hoe")
placeholder_text = "FirstName"

[node name="SID2" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_b3hoe")
placeholder_text = "LastName"

[node name="Email" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_b3hoe")
placeholder_text = "Email ID"

[node name="Password" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_b3hoe")
placeholder_text = "Password"
secret = true
secret_character = "*"

[node name="ConfirmPassword" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_b3hoe")
placeholder_text = "Confirm password"
secret = true
secret_character = "*"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_b3hoe")
text = "Select your Section:                             "

[node name="Section" type="OptionButton" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
alignment = 1
item_count = 2
popup/item_0/text = "Section1"
popup/item_0/id = 0
popup/item_1/text = "Section2"
popup/item_1/id = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_b3hoe")
text = "Select Professor:                                  "

[node name="Professor" type="OptionButton" parent="VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
item_count = 2
popup/item_0/text = "Dr. Bellamy"
popup/item_0/id = 0
popup/item_1/text = "Dr Aziz Fella"
popup/item_1/id = 1

[node name="Error" type="Label" parent="VBoxContainer"]
layout_mode = 2
horizontal_alignment = 1

[node name="Button" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.47
anchor_top = 0.667
anchor_right = 0.47
anchor_bottom = 0.667
offset_left = -83.4401
offset_top = -30.216
offset_right = 82.5599
offset_bottom = 30.784
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_b3hoe")
text = "Register
"

[node name="TextureButton" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 89.0
offset_top = 29.0
offset_right = 153.0
offset_bottom = 93.0
texture_normal = ExtResource("5_7fa50")
texture_pressed = ExtResource("5_7fa50")
texture_hover = ExtResource("5_7fa50")

[connection signal="pressed" from="Button" to="." method="_on_signup_button_pressed"]
[connection signal="pressed" from="TextureButton" to="." method="_on_texture_button_pressed"]
